src/objects/Mail_Code_Standard__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address_type__c</fullName>
        <label>Address Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mail_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Code</label>
        <referenceTo>Mail_Code__c</referenceTo>
        <relationshipLabel>Mail Code Standard</relationshipLabel>
        <relationshipName>Mail_Code_Standard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mail_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Mail Code Standard</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mail Code Standard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>